--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,25 +4,27 @@ server {
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
+    root   /usr/share/nginx/html;
+    index  index.html index.htm index.php;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm index.php;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
-    #location /sites/default/files/ {
-    #    expires 24h;  
-    #    root   /usr/share/nginx/html/sites/default/files;
-    #}
-    #location ~ .*\.(gif|jpg|jpeg|png)$ {
-    #    expires 24h;  
-    #    root   /usr/share/nginx/html;
-    #}
-    location ~ \.php(.*)$ {
-        root           /usr/share/nginx/html;
+    location ~ \.(gif|jpg|jpeg|png|svg|ico)$ {
+    #location ~ .*\.(gif|jpg|jpeg|png|svg|ico)$ {
+        expires 24h;  
+    }
+    location ~ \.(js|css)$ {
+    #location ~ .*\.(js|css)$ {
+        expires 24h;  
+    }
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    #location ~ \.php(.*)$ {
         fastcgi_pass   php_server:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /var/www/html$fastcgi_script_name;
-        fastcgi_param PATH_INFO $1;
+        #fastcgi_param PATH_INFO $1;
         include        fastcgi_params;
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
